delete extra files

--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@ State Research Agency, and European Social Fund. Below, the current research pro
                 <ul class="list-group">
 				 <li class="list-group-item"></li>
                 </ul>
-                <p align="center"><a href="C:\Users\Marta\Desktop\TRABAJO IEO DESDE EL 1 DE OCTUBRE DE 2020 EN ADELANTE\WEBSITE EVALICES\index3.html" class="btn">See details</a>
+                <p align="center"><a href="https://mervex-group.github.io/EVALICES/" class="btn">See details</a>
               </div>
             </div>
           </div>
