--- a/proof/group.html
+++ b/proof/group.html
@@ -104,6 +104,26 @@ sex ratio, etc) of demersal stocks (hake, conger eel, mullet, etc).</p></li>
 	<li><p align="justify">  <b>Julio Valeiras Mota</b> who has participated in national and international projects on
 marine resources in the Atlantic, Indian, Pacific and Mediterranean Sea.</p></li> 
 	<li><p align="justify">  <b>María Grazia Pennino:</b> Expert in marine biology, with a PhD in Mathematics and Statistics. Currently working at the C.O. Vigo, "Instituto Español de Oceanografía" at the Fishery Department. </p></li> 
+	<li><p align="justify">  <b>Fernando Ramos Modrego:</b> Expert in fisheries biology and indirect and direct (acoustics) 
+assessment methods, with more than 30 years of experience, since 2000 
+mainly focused in the Gulf of Cadiz fisheries of small pelagic fishes; 
+member of the ICES WGHANSA (as stock coordinator of the anchovy stock in 
+ICES Division 9a) and WGACEGG Working Groups (as responsible for the 
+ECOCADIZ and ECOCADIZ-RECLUTAS acoustic-trawl surveys series). 
+Participation in 20 research projects (national and international), 
+including his direct involvement in the Spanish Marine Strategy 
+Framework Directive (descriptors and monitoring programs related to 
+coastal small pelagic fish species and fisheries).
+	</p></li> 
+	
+	<li><p align="justify">  <b>Pablo Abaunza Martínez:</b> Main line of work and research is the assessment of commercial fish stocks, fishery biology, pelagic species biodiversity and the theory and practice in identifying commercial fish stocks. I participated in Assessment Working Groups and Workshops in ICES since 1990. I have been representative of ACFM first and then ACOM (Advisory Committee of ICES). I am now participating as member of the ICES Council as Spanish representative since 2015 and member of the ICES Bureau since 2020.
+From December 2008 to June 2012 I held the position of Director of the Oceanographic Center of Santander (IEO); from 2012 to June 2014 I was Head of the Fisheries Department (IEO) and from April 2015 to April 2019, I was the Deputy Director at IEO.
+ Participation in numerous national and international projects, having been the general coordinator of the following projects - tenders:
+ A multidisciplinary approach using genetic markers and biological tags in horse mackerel (Trachurus trachurus) stock structure analysis. (HOMSIR). RTD.  QLK5-Ct1999-01438. 
+Scientific Advice for Fisheries Beyond EU Waters (SAFEWATERS). Framework Contract MARE/2012/21.
+   This activity has generated several scientific articles with an H index = 18 at Web of Science (WOS).
+	</p></li> 
+	
 	
 	</ul>
 	 </div>
