no underline + photo+ email

--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
 		
 		  <li><a href="#IMPRESS">What is MERVEX?</a>
           </li>
+		  <li><a href="#portfolio">Dissemination</a></li>
           <li><a href="#Members">Members</a></li>
           <li><a href="#News">News</a></li>
 		  <li><a href="#Twitter">Tweets</a></li>
-          <li><a href="#portfolio">Dissemination</a></li>
           <li><a href="#footer">Contact Us</a>
 		  <a href="https://github.com/MERVEX-group"> <img src="img/git.png" alt="" height="20"></a>
 		  </li>
@@ -169,21 +169,21 @@ combination of several research lines ranging from monitoring the activity of
 the fleet and model design, up to the evaluation of management strategies. Therefore, MERVEX participates in the following <b>research lines</b>.
 
 <ul>
-    <li> Improvement of <u>knowledge</u> about the information <u>of fleet activity.</u></li>
-    <li> <u>Biology of exploited</u>  and non target <u>marine species</u>.</li>
-    <li> <u>Dynamics of exploited populations</u>.</li>
-    <li> <u>Oceanographic surveys as a calibration tool for abundance</u>
+    <li> Improvement of knowledge about the information of fleet activity.</li>
+    <li> Biology of exploited  and non target marine species.</li>
+    <li> Dynamics of exploited populations.</li>
+    <li> Oceanographic surveys as a calibration tool for abundance
 in the models.</li>
-    <li> <u>Development</u> and application of <u>predictive models that combine the dynamics of the stocks and the fleet activity</u> calibrated using the results of the surveys.</li>
-    <li> <u>Application of these models to the assessment of alternative management measures</u>
+    <li> Development and application of predictive models that combine the dynamics of the stocks and the fleet activity calibrated using the results of the surveys.</li>
+    <li> Application of these models to the assessment of alternative management measures
 taking into account the uncertainty of the system.</li>
-    <li> <u>Ecology of exploited populations</u> taking into account environmental interactions, trophic relations, 
+    <li> Ecology of exploited populations taking into account environmental interactions, trophic relations, 
 	impact on the environment, etc and developing useful indicators
  for assessing the impact of fishing on it.</li>
-    <li> <u>Development of models and indicators for the integrated assessment of
-marine ecosystems.</u></li>    
-<li> <u>Development of models to quantify the social and economic impact of
-different fishery management measures</u>, through the collaboration among the different
+    <li> Development of models and indicators for the integrated assessment of
+marine ecosystems.</li>    
+<li> Development of models to quantify the social and economic impact of
+different fishery management measures, through the collaboration among the different
 organizations involved (industry, NGOs and politicians).</li>
 </ul>
 
@@ -574,7 +574,7 @@ Below, basic information of the members is shown (emails, social networks, etc),
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>M. M. Rincón Hidalgo</h4>
-                  <span>margarita.rincon@csic.es</span>
+                  <span>margarita.rincon@ieo.es</span>
                   <div class="social">
                     <a href="https://twitter.com/margarita_rh?lang=es"><i class="fa fa-twitter"></i></a>
 					 <a href="https://www.researchgate.net/profile/Margarita_Rincon_Hidalgo"><img src="img/rg.png" alt="" height="20" width="20"></a>
