--- a/proof/proof/grc1.html
+++ b/proof/proof/grc1.html
@@ -62,10 +62,10 @@ by which different fishery management alternatives are evaluated. To this end, <
 <br>
 <p align="justify"> <b>The members of MERVEX participate in education tasks</b> at Galician universities, mainly through Masters in fisheries orientation 
 ("Master in Economics, Assessment and Management of the Marine Environment and Fishery Resources" of the "Campus del Mar" or the "Master of Marine 
-Biology Galician universities: UVigo-USC-UDC ”) as teachers and coordinators of master's and doctoral theses. <u>In the 2014-2016 period, 2 doctoral 
-theses have been presented, both with international mention and one cum-laude.</u>
-This international projection is also observed in the <b>participation in European projects</b> (VII-PM, INTERREG, LIFE or DGMARE), <u>particularly 
-projects applied to provide new useful knowledge for the management of fishery resources (5 FP7-KBBE projects)</u>. MERVEX researchers have led 4 
+Biology Galician universities: UVigo-USC-UDC ”) as teachers and coordinators of master's and doctoral theses. <b>In the 2014-2016 period, 2 doctoral 
+theses have been presented, both with international mention and one cum-laude.</b>
+This international projection is also observed in the <b>participation in European projects</b> (VII-PM, INTERREG, LIFE or DGMARE), <b>particularly 
+projects applied to provide new useful knowledge for the management of fishery resources (5 FP7-KBBE projects)</b>. MERVEX researchers have led 4 
 national projects, 1 international and several leadership of WPs and Case Studies of the VIIPM in the period 2014-2016.	
 </p>	
 	
