--- a/proof/proof/grc3.html
+++ b/proof/proof/grc3.html
@@ -72,7 +72,7 @@ DTZ-1200W., Magnifying glasses, image analyzers, etc.)
 The IEO has the following oceanographic vessels between 15 and 50 meters in length: Ramón Margalef, Francisco de P. Navarro, Lura, and Ángeles Alvariño.
 <br>
 <b>Ecosystem modeling and its interaction with fisheries requires powerful computers.</b>
-Some of the work is done on personal computers, but we also have an <u>HP Z-800 workstation with 12 processors</u> and we collaborate with <u>CESGA</u> 
+Some of the work is done on personal computers, but we also have an <b>HP Z-800 workstation with 12 processors</b> and we collaborate with <b>CESGA</b> 
 in developing models on their supercomputers.
 </p>
 </ul>
