--- a/index.html
+++ b/index.html
@@ -55,15 +55,21 @@
 
       <nav class="main-nav float-right d-none d-lg-block">
         <ul>
-		
 <li class="drop-down"><a href="#IMPRESS">What is MERVEX?</a>
             <ul>
 			<li><a href="./proof/GRC.html">GRC Mervex</a></li>
 		  <li><a href="https://impressproject.github.io/PROJECTIMPRESS/">IMPRESS</a></li>
 		  <li><a href="https://mervex-group.github.io/EVALICES/">EVALICES</a></li>
             </ul>
-          </li>
-		  <li><a href="#portfolio">Dissemination</a></li>
+</li>
+		 <li class="drop-down"><a href="#portfolio">Dissemination</a>
+            <ul>
+			<li><a href="./proof/papers.html">Publications</a></li>
+		  <li><a href="./proof/congress.html">Congress, Seminars and Workshops</a></li>
+		  <li><a href="./proof/WS.html">Working groups and documents</a></li>
+            </ul>
+</li>
+
           <li><a href="#Members">Members</a></li>
           <li><a href="#News">News</a></li>
 		  <li><a href="#Twitter">Tweets</a></li>
