--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
 
           <li><a href="#Members">Members</a></li>
           <li><a href="#News">News</a></li>
-		  <li><a href="#Twitter">Tweets</a></li>
           <li><a href="#footer">Contact Us</a>
+		  <a href="https://twitter.com/search?q=%23MERVEX&src=typed_query" class="twitter"><i class="fa fa-twitter"></i></a>
 		  <a href="https://github.com/MERVEX-group"> <img src="img/git.png" alt="" height="20"></a>
 		  </li>
         </ul>
@@ -150,12 +150,14 @@
 
 
   <main id="main">
+  
 
     <!--==========================
       IMPRESS Section
     ============================-->
 
     <section id="IMPRESS">
+
 	<section id="pricing" class="wow fadeInUp section-bg">
 
       <div class="container">
@@ -790,22 +792,22 @@ Below, basic information of the members is shown (emails, social networks, etc),
     <!--==========================
       Pricing Section
     ============================-->
-	<section id="Twitter">
-      <div class="container">
-        <header class="section-header">
-          <h3>Twitter</h3>
-          <p></p>
-        </header>
+	<section id="News">
+	  <div id="content">
+  <div id="left">
+  <p><br>
+		  <br>
+		  <br>
+		  <br>
+		  <br>
+		  </p>
 		<center> 
-	<a class="twitter-timeline" data-width="700" data-height="1000" data-theme="light" href="https://twitter.com/project_impress?ref_src=twsrc%5Etfw">Tweets by project_impress</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>	
+	<a class="twitter-timeline" data-width="400" data-height="1000" data-theme="light" href="https://twitter.com/project_impress?ref_src=twsrc%5Etfw">Tweets by project_impress</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>	
      </center> 
-	 </div>
-    </section><!-- #faq -->
-      <!--==========================
-      Frequently Asked Questions Section
-    ============================-->
-    <section id="News">
-      <div class="container">
+  </div>
+
+  <div id="right">
+<div class="container">
         <header class="section-header">
           <h3>News</h3>
           <p></p>
@@ -1246,6 +1248,9 @@ Very productive meeting, reviewing Working Packages and tasks of the project!A l
         </ul>
 
       </div>
+  </div>
+</div>
+
     </section><!-- #faq -->
 
   </main>
