Small changes following comments

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
               <h4 class="title"><a href="#IMPRESS">MERVEX</a></h4>
 			  <img src="img/intro.JPG" alt="" style="max-width:100%;width:auto;height:auto;">
               <br>
-			  <p align="justify">  Modeling and Evaluation of Exploited Resources (MERVEX), is a research group created to promote research related to the assessment of fishery resources at the Spanish Institute of Oceanography. <a href="#IMPRESS">Read More</a>
+			  <p align="justify">  Modeling and Evaluation of Exploited Resources (MERVEX), is a research group created to promote research related to the assessment of fishery resources at the "Instituto Español de Oceanografía". <a href="#IMPRESS">Read More</a>
 			  </p></div>
           </div>
           <div class="col-md-6 col-lg-4 wow bounceInUp" data-wow-duration="1.4s">
@@ -173,7 +173,7 @@
           <h3>MERVEX</h3>
 		  </header>
           <p align="justify"> 
-<b>MERVEX research group</b> has been created to strengthening, at Spanish Institute of Oceanography (<em>Instituto Español de Oceanografía; IEO</em>),
+<b>MERVEX research group</b> has been created to strengthening, at the "Instituto Español de Oceanografía" (IEO),
 the research related to 
 the fishery resource assessment. The assessment is the process through which the consequences of different alternatives for management fishery 
 resources are assessed
@@ -200,9 +200,10 @@ different fishery management measures, through the collaboration among the diffe
 organizations involved (industry, NGOs and politicians).</li>
 </ul>
 
-MERVEX participates in <b>competitive projects of national and internacional scope</b> financed by "Xunta de Galicia. 
-Consellería de Economía, Emprego y Industria", "Axencia de Innovación (Gain)", Spanish Institute of Oceanography, Ministry of Science and Innovation, 
-State Research Agency, and European Social Fund. Below, the current research projects of Mervex are presented. 
+MERVEX participates in <b>competitive projects of national and internacional scope</b> financed by "<a href="https://ceei.xunta.gal/portada">Xunta de Galicia. 
+Consellería de Economía, Emprego y Industria</a>", "<a href="https://ceei.xunta.gal/a-conselleria/axencia-galega-de-innovacion?langId=es_ES">Axencia de Innovación (Gain)</a>",
+"<a href="http://www.ieo.es/es/">Instituto Español de Oceanografía</a>", <a href="https://www.ciencia.gob.es/portal/site/MICINN?lang_choosen=en">Ministry of Science and Innovation</a>,
+<a href="https://www.ciencia.gob.es/portal/site/MICINN/menuitem.8d78849a34f1cd28d0c9d910026041a0/?vgnextoid=664cfb7e04195510VgnVCM1000001d04140aRCRD&lang_choosen=en">State Research Agency</a>, and <a href="https://ec.europa.eu/esf/home.jsp">European Social Fund</a>.. Below, the current research projects of Mervex are presented. 
 <br> </p>
         
 
@@ -287,7 +288,7 @@ State Research Agency, and European Social Fund. Below, the current research pro
         <header class="section-header">
           <h3>Dissemination</h3>
 		  </header>
-          <p align="justify"> MERVEX shares their research with the scientific community through publications, seminars, workshops and events (click in the links below).
+          <p align="justify"> MERVEX shares their research with the scientific community through publications, seminars, workshops and events (click on the links below).
 
         <div class="row flex-items-xs-middle flex-items-xs-center">
       
