--- a/proof/proof/grc2.html
+++ b/proof/proof/grc2.html
@@ -50,7 +50,7 @@
 	</header>
 
 <p align="justify">
-<b>The Spanish Institute of Oceanography (IEO) is the advisory institution of the spanish administration in terms of fishing.</b> 
+<b>The "Instituto Español de Oceanografía" (IEO) is the advisory institution of the spanish administration in terms of fishing.</b> 
 Furthermore, the IEO is the national representative on international advisory organizations such as the International Council for the Exploration of the Sea (ICES)
 where assessment of fishery resources relevant for European fleets, which work in the Northeast Atlantic, are carried out and management proposals are 
 developed to ensure the sustainable exploitation of these resources. Achieve this sustainability requires a deep knowledge of the ecology and biology
