--- a/proof/proof/grc3.html
+++ b/proof/proof/grc3.html
@@ -53,7 +53,7 @@
 
 For the study of the biology of the species of fishing interest, MERVEX group has:
 <ul>
-<li> <p align="justify"> <b>Histology laboratory in the C. O. of Vigo:</b> Dedicated to the study of reproductive ecology. 
+<li> <p align="justify"> <b>Histology laboratory in the C. O. Vigo:</b> Dedicated to the study of reproductive ecology. 
 It has all the necessary equipment for automated work in paraffin and resin (tissue processor, microtomes, stainer, etc). 
 The safety and hygiene equipment at work available in the laboratory consists of 7 gas extraction cabinets, two partial masks 
 with filters for formaldehyde and two full masks with filters for formaldehyde.
@@ -62,7 +62,7 @@ with filters for formaldehyde and two full masks with filters for formaldehyde.
 of the different fishing species are recorded to determine the key age size and growth parameters that are used in the population dynamics models. 
 The laboratory has all the necessary material for the processed and analysis of otoliths and vertebrae (magnifying glasses, resin sample cutter, etc.)
 </p>	</li>
-<li> <p align="justify"> <b>Image analysis laboratories in the C.O. of Vigo and in the C.O of A Coruña</b> are dedicated to the study 
+<li> <p align="justify"> <b>Image analysis laboratories in the C.O. Vigo and in the C.O A Coruña</b> are dedicated to the study 
 of reproductive and growth ecology for the estimation of biological parameters for evaluation. The laboratory is equipped with standard 
 equipment for image analysis (1 stereomicroscope, 1 macroscope, 4 optical microscopes with digital cameras, 2 Wacom Cintiq tablets
 DTZ-1200W., Magnifying glasses, image analyzers, etc.)
