--- a/index.html
+++ b/index.html
@@ -118,10 +118,10 @@
             <div class="box">
               <h4 class="title"><a href="#News">News</a></h4>
 			  <br>
-              <p align="justify"> <a href="#News">Mixed Fisheries advice in the Iberian waters (30/10/2020) </a>
+              <p align="justify"> <a href="#News">Annual meeting GRC-MERVEX (10/11/2020) </a>
 			   <br>
 			    <br>
-			  <img src="img/new41.jpg" alt="" style="max-width:100%;width:auto;height:auto;">
+			  <img src="img/new42.png" alt="" style="max-width:100%;width:auto;height:auto;">
 			  </p>
             </div>
           </div>
@@ -815,6 +815,12 @@ Below, basic information of the members is shown (emails, social networks, etc),
         </header>
 		
         <ul id="News-list" class="wow fadeInUp">
+																				<li>
+            <a data-toggle="collapse" class="collapsed" href="#News42">Annual meeting GRC-MERVEX (10/11/2020)<i class="ion-android-remove"></i></a>
+            <div id="News42" class="collapse" data-parent="#News-list"> <p align="justify"> </p> Productive meeting of GRC-MERVEX planning exciting activities for 2021.
+</p><div align="center"> <img src="img/new42.png" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
+            </div>
+         </li>
 		
 																		<li>
             <a data-toggle="collapse" class="collapsed" href="#News41">Mixed Fisheries advice in the Iberian waters (30/10/2020)<i class="ion-android-remove"></i></a>
