--- a/proof/group.html
+++ b/proof/group.html
@@ -70,6 +70,8 @@ Participation in 28 international projects, 103 papers published in peer-reviewe
 </p></li> 
 	<li><p align="justify">  <b>Esther Abad Casas:</b> Experience in fisheries research. 32 research projects,
 18 publications, 56 communications.</p></li> 
+<li><p align="justify">  <b>Eva Velasco Gil:</b> Member of the "Sustainable fisheries group" that is focused on improving Technical Measures to reduce unwanted
+captures and to increase survival of discarded species. Participation in numerous surveys at sea.</p></li> 
 	<li><p align="justify">  <b>Dra. Paz Sampedro Pastor:</b> Expert in identification and assessment of demersal stocks 
 	and biology
 and ecology of commercial shellfish. 16 research projects, 14 publications.</p></li> 
