--- a/index.html
+++ b/index.html
@@ -118,10 +118,10 @@
             <div class="box">
               <h4 class="title"><a href="#News">News</a></h4>
 			  <br>
-              <p align="justify"> <a href="#News">Annual meeting GRC-MERVEX (10/11/2020) </a>
+              <p align="justify"> <a href="#News">Interview of our member Francisco Izquierdo en "Vivir o Mar" (01/03/2021) </a>
 			   <br>
 			    <br>
-			  <img src="img/new42.png" alt="" style="max-width:100%;width:auto;height:auto;">
+			  <img src="img/new46.jpg" alt="" style="max-width:100%;width:auto;height:auto;">
 			  </p>
             </div>
           </div>
@@ -815,6 +815,41 @@ Below, basic information of the members is shown (emails, social networks, etc),
         </header>
 		
         <ul id="News-list" class="wow fadeInUp">
+		<li>
+            <a data-toggle="collapse" class="collapsed" href="#News46"> Interview of our member Francisco Izquierdo en "Vivir o Mar" (01/03/2021)<i class="ion-android-remove"></i></a>
+            <div id="News46" class="collapse" data-parent="#News-list"> <p align="justify"> </p> Our student (Francisco Izquierdo) explained his recent research entitled "Spatio-Temporal Assessment of the European Hake (<em>Merluccius merluccius</em>) Recruits in the Northern Iberian Peninsula" on the TV program "Vivir o mar".
+<a href="https://www.crtvg.es/tvg/a-carta/programa-1029-choco-de-redondela-zonas-de-cria-de-pescada-redogal-4830727?t=643">Go to the video.</a></p>
+</p><div align="center"> <img src="img/new46.jpg" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
+            </div>
+         </li>
+		<li>
+            <a data-toggle="collapse" class="collapsed" href="#News45"> V Scientific Conference of Students of the SEB  (28/01/2021)<i class="ion-android-remove"></i></a>
+            <div id="News45" class="collapse" data-parent="#News-list"> <p align="justify"> </p> Our students, D. Lojo Amoedo and A. Paz Cuña are participated in the  V Scientific Conference of Students of the SEB. <a href="./proof/con12.html">More details</a>
+</p><div align="center"> <img src="img/new45.jpg" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
+            </div>
+         </li>
+		<li>
+            <a data-toggle="collapse" class="collapsed" href="#News44"> The World Conference on Marine Biodiversity (11/12/2020)<i class="ion-android-remove"></i></a>
+            <div id="News44" class="collapse" data-parent="#News-list"> <p align="justify"> </p> Impress members have been participated to the 
+ World Conference on Marine Biodiversity
+ sharing different studies that we are carrying on the many Working Packages of Impress Project.
+
+
+</p><div align="center"> <img src="img/new44a.jpg" alt="" style="max-width:100%;width:auto;height:auto;">     
+</p><div align="center"> <img src="img/new44b.jpg" alt="" style="max-width:100%;width:auto;height:auto;">  
+</p><div align="center"> <img src="img/new44c.png" alt="" style="max-width:100%;width:auto;height:auto;">       </div>
+            </div>
+         </li>
+						<li>
+            <a data-toggle="collapse" class="collapsed" href="#News43">ICES
+ training course on Bayesian Network (9/12/2020)<i class="ion-android-remove"></i></a>
+            <div id="News43" class="collapse" data-parent="#News-list"> <p align="justify"> </p>This week our PhD student Fran Izquierdo is attending the 
+ICES
+ training course on Bayesian Network (BN) analysis and the social-cultural dimension, learning how to apply BN to improve for stocks management.
+</p><div align="center"> <img src="img/new43.png" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
+            </div>
+         </li>		
+		
 																				<li>
             <a data-toggle="collapse" class="collapsed" href="#News42">Annual meeting GRC-MERVEX (10/11/2020)<i class="ion-android-remove"></i></a>
             <div id="News42" class="collapse" data-parent="#News-list"> <p align="justify"> </p> Productive meeting of GRC-MERVEX planning exciting activities for 2021.
