--- a/index.html
+++ b/index.html
@@ -118,10 +118,10 @@
             <div class="box">
               <h4 class="title"><a href="#News">News</a></h4>
 			  <br>
-              <p align="justify"> <a href="#News">Interview of our member Francisco Izquierdo en "Vivir o Mar" (01/03/2021) </a>
+              <p align="justify"> <a href="#News">Iberian Symposium on Modeling and Assessment of Fishery Resources (SIMERPE) to be held in Vigo on October 19-22! (01/04/2021) </a>
 			   <br>
 			    <br>
-			  <img src="img/new46.jpg" alt="" style="max-width:100%;width:auto;height:auto;">
+			  <img src="img/new47.jpg" alt="" style="max-width:100%;width:auto;height:auto;">
 			  </p>
             </div>
           </div>
@@ -815,6 +815,13 @@ Below, basic information of the members is shown (emails, social networks, etc),
         </header>
 		
         <ul id="News-list" class="wow fadeInUp">
+				<li>
+            <a data-toggle="collapse" class="collapsed" href="#News47">  Iberian Symposium on Modeling and Assessment of Fishery Resources (SIMERPE) (01/04/2021)<i class="ion-android-remove"></i></a>
+            <div id="News47" class="collapse" data-parent="#News-list"> <p align="justify"> </p>  Impress Project is organizing the Iberian Symposium on Modeling and Assessment of Fishery Resources (SIMERPE) to be held in Vigo on October 19-22!
+<a href="https://mervex-group.github.io/SIMERPE/">Go to the website.</a></p>
+</p><div align="center"> <img src="img/new47.jpg" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
+            </div>
+         </li>
 		<li>
             <a data-toggle="collapse" class="collapsed" href="#News46"> Interview of our member Francisco Izquierdo en "Vivir o Mar" (01/03/2021)<i class="ion-android-remove"></i></a>
             <div id="News46" class="collapse" data-parent="#News-list"> <p align="justify"> </p> Our student (Francisco Izquierdo) explained his recent research entitled "Spatio-Temporal Assessment of the European Hake (<em>Merluccius merluccius</em>) Recruits in the Northern Iberian Peninsula" on the TV program "Vivir o mar".
