--- a/proof/WS.html
+++ b/proof/WS.html
@@ -45,11 +45,38 @@
         </header>
 
         <ul id="News-list" class="wow fadeInUp">
+		 <li>
+            <a data-toggle="collapse" class="collapsed" href="#News16"> 2021<i class="ion-android-remove"></i></a>
+            <div id="News16" class="collapse" data-parent="#News-list"> 
+              <p>
+	<ul>
+
+<li>  Growth, age estimation and corroboration of northeast atlantic chub mackerel (Scomber colias) in northern Iberian waters: a first attempt.
+ <a href="https://www.researchgate.net/publication/351689057_GROWTH_AGE_ESTIMATION_AND_CORROBORATION_OF_NORTHEAST_ATLANTIC_CHUB_MACKEREL_SCOMBER_COLIAS_IN_NORTHERN_IBERIAN_WATERS_A_FIRST_ATTEMPT">More details</a>
+</li>
+
+<li>  Preliminary observation on sexual maturity of chub mackerel (Scomber colias) in the Northern Iberian Atlantic waters (ICES Divisions 27.8.c and 27.9.a.N).
+ <a href="https://www.researchgate.net/publication/349244241_Preliminary_observation_on_sexual_maturity_of_chub_mackerel_Scomber_colias_in_the_Northern_Iberian_Atlantic_waters_ICES_Divisions_278c_and_279aN">More details</a>
+</li>
+
+
+
+
+
+
+
+</ul>		  	 
+</p>
+            </div>
+          </li>
 		          		  		  <li>
             <a data-toggle="collapse" class="collapsed" href="#News15"> 2020<i class="ion-android-remove"></i></a>
             <div id="News15" class="collapse" data-parent="#News-list"> 
               <p>
 	<ul>
+
+<li>  Exploration of historical data and potential solution for the missing information in the Iberian sardine DEPM survey (SAREVA 0320) caused by the COVID-19 pandemic crisis.
+</li>
 
 <li>  Changes in the length-weight relationship in Northern Stock of European hake (Merluccius merluccius).
  <a href="./proof/pub3.html">More details</a>
@@ -170,6 +197,8 @@ data collection for Nephrops FU 25 (North Galicia) in 2018.
             <div id="News13" class="collapse" data-parent="#News-list"> 
               <p>
 	<ul>
+	<li> ICES Working Group on Acoustic and Egg Surveys for Sardine and Anchovy in ICES Areas 7, 8 and 9 (WGACEGG).
+<a href="https://www.ices.dk/community/groups/pages/wgacegg.aspx">More details.</a></li>
 	<li> Workshop on Tools and Development of Stock Assessment Models. Using a4a and stock synthesis (WKTADSA)</li>
 <li>  Workshop on the Development of Quantitative Assessment Methodologies based on LIFE-history traits, exploitation characteristics, and other relevant parameters for data-limited stocks (WKLIFEX).
 <a href="https://www.ices.dk/community/groups/Pages/WKLIFEX.aspx">More details.</a></li>
