--- a/proof/papers.html
+++ b/proof/papers.html
@@ -58,6 +58,23 @@
         </header>
 
         <ul id="News-list" class="wow fadeInUp">
+		<li>
+            <a data-toggle="collapse" class="collapsed" href="#News16"> 2021<i class="ion-android-remove"></i></a>
+            <div id="News16" class="collapse" data-parent="#News-list"> 
+              <p>
+	<ul>
+	    <li><p align="justify"> <b>Izquierdo, F.</b>, Paradinas, I., <b>Cerviño, S.</b>, Conesa, D., Alonso-Fernández, A., Velasco, F., Preciado, I., Punzón, A., Saborido-Rey, F., <b>Pennino, M. G</b>. (2021).
+Spatio-Temporal Assessment of the European Hake (<em>Merluccius merluccius</em>) Recruits in the Northern Iberian Peninsula.  Frontiers in Marine Science, 8. 
+ <a href="https://www.frontiersin.org/article/10.3389/fmars.2021.614675"> Link</a></p></li>
+
+<li><p align="justify"> Navarro, M.R., Landa, J., Villamor, B., <b>Domínguez-Petit, R.</b> (in press).
+First approach to the growth and age corroboration of Northeast Atlantic chub mackerel (Scomber colias) in northern Iberian Waters. Scientific paper (Estuarine, Coastal and Shelf Science).</li>
+
+
+</ul>		  	 
+</p>
+            </div>
+          </li>
 		          		  		  <li>
             <a data-toggle="collapse" class="collapsed" href="#News15"> 2020<i class="ion-android-remove"></i></a>
             <div id="News15" class="collapse" data-parent="#News-list"> 
