--- a/proof/congress.html
+++ b/proof/congress.html
@@ -45,6 +45,26 @@
         </header>
 
         <ul id="News-list" class="wow fadeInUp">
+		 <li>
+            <a data-toggle="collapse" class="collapsed" href="#News16"> 2021<i class="ion-android-remove"></i></a>
+            <div id="News16" class="collapse" data-parent="#News-list"> 
+              <p>
+	<ul>
+
+<li><p align="justify"> Lojo, D., Cerviño, S., Grazia Pennino, M.G., Cousido-Rocha, M. Study of the life traits of demersal sh in Atlantic Iberian waters. Poster communication
+in the "V Jornadas Científicas de Estudiantes de la SEB", online 27-29 January 2021. 
+<a href="http://www.biometricsociety.net/v-jornadas-cientificas-de-estudiantes-de-la-seb/">Go to the congress.</a></p></li>
+
+<li><p align="justify"> Paz Cuña, A., Cousido-Rocha, M., Cerviño, S., Grazia Pennino, M.G. "Aplicación de modelos de producción en la gestión de recursos pesqueros". Oral communication
+in the "V Jornadas Científicas de Estudiantes de la SEB", online 27-29 January 2021. 
+<a href="http://www.biometricsociety.net/v-jornadas-cientificas-de-estudiantes-de-la-seb/">Go to the congress.</a></p></li>
+
+<li><p align="justify"> Cousido-Rocha, M., Cerviño, S., Pennino, M.G. A new R-package for the analysis of the fisheries population under uncertainty. Poster communication
+in the VII Conference of Users of R in Galicia, online 28 January 2021. <a href="https://conectar2021.github.io/ConectaR2021/">Go to the congress.</a></p></li>
+</ul>		  	 
+</p>
+            </div>
+          </li>
 		          		  		  <li>
             <a data-toggle="collapse" class="collapsed" href="#News15"> 2020<i class="ion-android-remove"></i></a>
             <div id="News15" class="collapse" data-parent="#News-list"> 
@@ -61,6 +81,12 @@ online 22-26 June 2020. <a href="https://www.maths.unsw.edu.au/events/2020-06/vi
 
 <li><p align="justify"> Cousido-Rocha, M., Cerviño, S., Pennino, M.G. A new R-package for the analysis of the fisheries population under uncertainty. Oral communication
 in the VII Conference of Users of R in Galicia, online 15 October 2020. <a href="https://www.r-users.gal/">Go to the congress.</a></p></li>
+
+<li><p align="justify"> Cousido-Rocha, M., Cerviño, S., Pennino, M.G. A new R-package for the analysis of the fisheries population under uncertainty. Oral communication
+in the 13th International Conference of the ERCIM WG on Computational and Methodological Statistics (CMStatistics 2020), online 21 December 2020. 
+<a href="http://www.cmstatistics.org/CMStatistics2020/">Go to the congress.</a></p></li>
+
+
 
 
 </ul>		  	 
