--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
               <h4 class="title"><a href="#IMPRESS">MERVEX</a></h4>
 			  <img src="img/intro.JPG" alt="" style="max-width:100%;width:auto;height:auto;">
               <br>
-			  <p align="justify">  Modeling and Evaluation of Exploited Resources (MERVEX), is a research group created to promote research related to the assessment of fishery resources at the "Instituto Español de Oceanografía". <a href="#IMPRESS">Read More</a>
+			  <p align="justify">  Modeling and Evaluation of Exploited Resources (MERVEX), is a research group created to promote research related to the assessment of fishery resources at the "Instituto Español de Oceanografía". <a href="#IMPRESS">Read More.</a>
 			  </p></div>
           </div>
           <div class="col-md-6 col-lg-4 wow bounceInUp" data-wow-duration="1.4s">
