--- a/proof/WS.html
+++ b/proof/WS.html
@@ -46,8 +46,8 @@
 
         <ul id="News-list" class="wow fadeInUp">
 		 <li>
-            <a data-toggle="collapse" class="collapsed" href="#News16"> 2021<i class="ion-android-remove"></i></a>
-            <div id="News16" class="collapse" data-parent="#News-list"> 
+            <a data-toggle="collapse" class="collapsed" href="#News16b"> 2021<i class="ion-android-remove"></i></a>
+            <div id="News16b" class="collapse" data-parent="#News-list"> 
               <p>
 	<ul>
 
@@ -70,8 +70,8 @@
             </div>
           </li>
 		          		  		  <li>
-            <a data-toggle="collapse" class="collapsed" href="#News15"> 2020<i class="ion-android-remove"></i></a>
-            <div id="News15" class="collapse" data-parent="#News-list"> 
+            <a data-toggle="collapse" class="collapsed" href="#News15b"> 2020<i class="ion-android-remove"></i></a>
+            <div id="News15b" class="collapse" data-parent="#News-list"> 
               <p>
 	<ul>
 
@@ -128,8 +128,8 @@ Functional Unit 31 (Cantabrian Sea) 2019.
             </div>
           </li>
 		          		  		  <li>
-            <a data-toggle="collapse" class="collapsed" href="#News14">  2019<i class="ion-android-remove"></i></a>
-            <div id="News14" class="collapse" data-parent="#News-list">
+            <a data-toggle="collapse" class="collapsed" href="#News14b">  2019<i class="ion-android-remove"></i></a>
+            <div id="News14b" class="collapse" data-parent="#News-list">
               <p>
 			  			 
 </p>
@@ -192,22 +192,112 @@ data collection for Nephrops FU 25 (North Galicia) in 2018.
         </header>
 
         <ul id="News-list" class="wow fadeInUp">
+				          		  		  <li>
+            <a data-toggle="collapse" class="collapsed" href="#News14"> 2021<i class="ion-android-remove"></i></a>
+            <div id="News14" class="collapse" data-parent="#News-list"> 
+              <p>
+	<ul>
+										<li> ICES Working Group for the Bay of Biscay and the Iberian waters Ecoregion (WGBIE).
+<a href="https://www.ices.dk/community/groups/Pages/WGBIE.aspx">More details.</a>
+</li>
+										<li> ICES Working Group on Cephalopod Fisheries and Life History (WGCEPH).
+<a href="https://www.ices.dk/community/groups/Pages/WGCEPH.aspx">More details.</a>
+</li>
+		
+								<li> ICES Advice Drafting Group on Especias ampliamente distribuidas (WGWIDE).
+<a href="https://www.ices.dk/community/groups/Pages/WGWIDE.aspx">More details.</a>
+</li>
+			
+										<li> ICES Working Group on Mixed Fisheries Advice (WGMIXFISH-ADVICE).
+<a href="https://www.ices.dk/community/groups/Pages/WGMIXFISH.aspx">More details.</a>
+</li>
+			
+										<li> ICES Benchmark Workshop on the development of MSY advice for category 3 stocks using Surplus Production Model in Continuous Time; SPiCT (WKMSYSPiCT).
+<a href="https://www.ices.dk/community/groups/Pages/WKMSYSPiCT2021.aspx">More details.</a>
+</li>
+			
+							<li> ICES Benchmark Workshop on West of Scotland Stocks (WKWEST).
+<a href="https://www.ices.dk/community/groups/Pages/WKWEST2021.aspx">More details.</a>
+</li>
+						<li> ICES WGBIE meetings.
+<a href="https://www.ices.dk/community/groups/Pages/WGBIE.aspx">More details.</a>
+</li>
+						<li> ICES Working Group on Widely Distributed Stocks (WGWIDE).
+<a href="https://www.ices.dk/community/groups/Pages/WGWIDE.aspx">More details.</a>
+</li>
+						<li>  ICES Interbenchmark Protocol of Iberian Sardine (WKIBPIS).
+</li>
+						<li> ICES Working Group on Southern Horse Mackerel, Anchovy and Sardine (WGHANSA-1).
+<a href="https://www.ices.dk/community/groups/Pages/WGhansa.aspx">More details.</a> 
+</li>
+					<li> ICES Workshop for the evaluation of the Iberian sardine HCR (WKSARHCR).
+<a href="https://www.ices.dk/community/groups/Pages/WKSARHCR-2021.aspx">More details.</a>
+</li>
+				<li> ICES/PICES Working Group on Small Pelagic Fish.
+<a href="https://www.ices.dk/community/groups/Pages/Wgspf.aspx">More details.</a>
+</li>
+				<li> WGMEGS21, Working group on mackerel and horse mackerel egg surveys.
+<a href="http://www.repositorio.ieo.es/e-ieo/handle/10508/12474">More details.</a>
+</li>
+				<li> Otolith exchange of Deep-Water Species.
+</li>
+				<li> ICES Working Group on Acoustic and Egg Surveys for Sardine and Anchovy in ICES areas 7, 8 and 9 (WGACEGG). 
+<a href="http://www.repositorio.ieo.es/e-ieo/handle/10508/11632">More details.</a>
+</li>
+			<li> ICES Workshop on Adult Egg production Methods Parameters Estimation on Mackerel and Horse Mackerel. (WKAEPM).
+<a href="https://www.ices.dk/community/groups/Pages/WKAEPM.aspx">More details.</a>
+</li>
+		<li> STECF. EWG. Technical Measures in the Celtic Sea.
+<a href="https://stecf.jrc.ec.europa.eu/ewg2118">More details.</a>
+</li>
+	<li> Plenary Meeting Reports. STECF PLENARY 21-01, 21-02, and 21-03.
+<a href="https://stecf.jrc.ec.europa.eu/plen2101">More details of 21-01.</a>
+<a href="https://stecf.jrc.ec.europa.eu/plen2102">More details of 21-01.</a>
+<a href="https://stecf.jrc.ec.europa.eu/plen2103">More details of 21-01.</a>
+</li>
+</ul>		  	 
+</p>
+            </div>
+          </li>
 		          		  		  <li>
             <a data-toggle="collapse" class="collapsed" href="#News13"> 2020<i class="ion-android-remove"></i></a>
             <div id="News13" class="collapse" data-parent="#News-list"> 
               <p>
 	<ul>
-	<li> ICES Working Group on Acoustic and Egg Surveys for Sardine and Anchovy in ICES Areas 7, 8 and 9 (WGACEGG).
-<a href="https://www.ices.dk/community/groups/pages/wgacegg.aspx">More details.</a></li>
-	<li> Workshop on Tools and Development of Stock Assessment Models. Using a4a and stock synthesis (WKTADSA)</li>
-<li>  Workshop on the Development of Quantitative Assessment Methodologies based on LIFE-history traits, exploitation characteristics, and other relevant parameters for data-limited stocks (WKLIFEX).
-<a href="https://www.ices.dk/community/groups/Pages/WKLIFEX.aspx">More details.</a></li>
-
-<li> Working Group for the Bay of Biscay and the Iberian Waters Ecoregion (WGBIE).
+	<li> ICES Working Group for the Bay of Biscay and the Iberian waters Ecoregion (WGBIE).
 <a href="https://www.ices.dk/community/groups/Pages/WGBIE.aspx">More details.</a></li>
-
-<li> Working Group on the Biology and Assessment of Deep Sea Fisheries Resources (WGDEEP).
-<a href="https://www.ices.dk/community/groups/Pages/WGDEEP.aspx">More details.</a></li>
+	<li>  ICES. Workshop on Tools and development of Stock Assessment Models using a4a and Stock Synthesis (WKTADSA1).
+</li>
+	<li> ICES Working Group on Cephalopod Fisheries and Life History (WGCEPH).
+<a href="https://www.ices.dk/community/groups/Pages/WGCEPH.aspx">More details.</a></li>
+	<li> ICES WKLIFE-X. Tenth Workshop on the Development of Quantitative Assessment Methodologies based on LIFE-history traits.
+<a href="https://www.ices.dk/community/groups/Pages/WKLIFEX.aspx">More details.</a></li>
+	<li> ICES WGMIXFISH-ADVICE. Working Group in Mixed Fisheries Advice.
+<a href="https://www.ices.dk/community/groups/Pages/WGMIXFISH.aspx">More details.</a></li>
+	<li> ICES WKMSE3. Workshop on Guidelines for Management Strategy Evaluations.
+<a href="https://www.ices.dk/sites/pub/Publication%20Reports/Expert%20Group%20Report/Fisheries%20Resources%20Steering%20Group/2020/ICES%20WKGMSE3%202020.pdf">More details.</a></li>
+	<li>  Benchmark Workshop on the development of MSY advice for category 3 stocks using Surplus Production Model in Continuous Time (SPICT) WKMSYSPiCT.
+</li>
+	<li> ICES WGACEGG. ICES Working Group on Acoustic and Egg Surveys for Sardine and Anchovy in ICES areas 7, 8 and 9.
+<a href="https://www.ices.dk/community/groups/Pages/WGACEGG.aspx">More details.</a></li>
+	<li> ICES COMEDA. Working Group on Comparative Ecosystem-based Analyses of Atlantic and Mediterranean marine systems.
+<a href="https://www.ices.dk/community/groups/Pages/WGCOMEDA.aspx">More details.</a></li>
+	<li> ICES WGHANSA-1. ICES Working Group on Southern Horse Mackerel, Anchovy and Sardine.
+<a href="https://www.ices.dk/community/groups/Pages/WGHANSA.aspx">More details.</a></li>
+	<li>  ICES WGHANSA-2. ICES Working Group on Southern Horse Mackerel, Anchovy and Sardine.
+<a href="https://www.ices.dk/community/groups/Pages/WGHANSA.aspx">More details.</a></li>
+	<li> ICES Working group on mackerel and horse mackerel egg surveys (WGMEGS-1).
+<a href="https://www.ices.dk/community/groups/Pages/WGMEGS.aspx">More details.</a></li>
+	<li> ICES Working group on mackerel and horse mackerel egg surveys (WGMEGS-2).
+<a href="https://www.ices.dk/community/groups/Pages/WGMEGS.aspx">More details.</a></li>
+	<li> WGSPF ICES/PICES Working Group on Small Pelagic Fishes.
+<a href="https://www.ices.dk/community/groups/Pages/Wgspf.aspx">More details.</a></li>
+	<li> Marine Spatial Planning Workshop: Balancing social, economic, cultural, and ecological objectives. Imber-IMECaN.
+<a href="https://www.msp-platform.eu/events/marine-spatial-planning-workshop-balancing-social-economic-cultural-and-ecological">More details.</a></li>
+	<li> ICES Workshop on Methodologies for Nephrops reference points (WKNEPHROPS). 
+<a href="https://archimer.ifremer.fr/doc/00710/82177/">More details.</a></li>  
+	<li>  STECF EWG 20-10: Fisheries Dependent Information (FDI).
+<a href="https://stecf.jrc.ec.europa.eu/reports/fdi/-/asset_publisher/5ZaD/document/id/2789710/maximized?inheritRedirect=false">More details.</a></li> 
 </ul>		  	 
 </p>
             </div>
